Set always-on-top widgets non-activatable in Mash

Since AshFocusRules consider such windows non-activatable, this
should be aligned in the window service client. Otherwise
client-side focus -> window-service attempts to focus ->
fail -> window blurred happen.

Bug: 923049
Test: views_unittests
Change-Id: I7d0409b31c9c9188ab4d50f16451f4136bd41e76
Reviewed-on: https://chromium-review.googlesource.com/c/1419221
Auto-Submit: Jun Mukai <mukai@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624182}
Former-commit-id: 2bcce6449fcc55bc3ac94198c6d56f2d69063a69